--- a/smart_logger/front_page/template/t_plot.html
+++ b/smart_logger/front_page/template/t_plot.html
@@ -81,6 +81,21 @@
                 })
                 .catch(error => console.error(error));
             }, 30000);
+            document.addEventListener("visibilitychange", function() {
+              if (document.visibilityState === 'visible') {
+                // 用户已返回当前页面，执行某些操作
+                fetch("{{url_for('check_new_image')}}")
+                .then(response => response.json())
+                .then(data => {
+                    // 如果返回结果是'ok'
+                    if (data.status === 'ok') {  // 假设你要检查的是key1的值
+                        // 刷新图片
+                        img.src = data.url;
+                    }
+                })
+                .catch(error => console.error(error));
+              }
+            });
             {% endif %}
         }
 
